# BusBridge-CORE

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: busbridgeConfig.cmake.in
examples/: CMakeLists.txt  can_sniffer.cpp  read_bme280.cpp
include/: BME280Reader.h  I2CDevice.h  I2CError.h  I2CInterface.h  IProtocolError.h
include/can/: CANDevice.h  CANError.h  CANMessage.h  CANSniffer.h  ICANInterface.h  SocketCANInterface.h
include/i2c/: BME280Reader.h  I2CDevice.h  I2CError.h  I2CInterface.h
include/i2c/platform/: LinuxI2CDevice.h  WindowsI2CDevice.h
include/platform/: LinuxI2CDevice.h  WindowsI2CDevice.h
packaging/: CPackConfig.cmake
src/: BME280Reader.cpp  CMakeLists.txt  I2CDevice.cpp  I2CError.cpp  LinuxI2CDevice.cpp
src/can/: CANDevice.cpp  CANError.cpp  CANMessage.cpp  CANSniffer.cpp  SocketCANInterface.cpp
src/i2c/: BME280Reader.cpp  I2CDevice.cpp  I2CError.cpp  LinuxI2CDevice.cpp
